--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,40 @@
 {
-  "name": "server",
+  "name": "prj_credit_class_management_sys",
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon ./src/app.js",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LeQuocPhong2k2/prj_credit_class_management_sys.git"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+  "bugs": {
+    "url": "https://github.com/LeQuocPhong2k2/prj_credit_class_management_sys/issues"
   },
+  "homepage": "https://github.com/LeQuocPhong2k2/prj_credit_class_management_sys#readme",
   "dependencies": {
-    "mongoose": "^8.3.2"
+    "aws-sdk": "^2.1604.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "http": "^0.0.1-security",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.3.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
