--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "method-override": "^3.0.0",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
