--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@firebase/util": "^1.9.5",
+    "@garvae/react-pie-chart": "^1.1.5-deprecated",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,6 +12,7 @@
     "fa-react-icon": "^1.2.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "moment-timezone": "^0.5.45",
     "prettierrc": "^0.0.0-5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
