--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.3.2",
