--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,4 +1,24 @@
-.vscode
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-src/config/
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# không lấy no
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
