--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "cookie-universal": "^2.2.2",
     "fa-react-icon": "^1.2.0",
     "flowbite": "^2.3.0",
@@ -19,9 +20,10 @@
     "material-ui": "^0.20.2",
     "moment-timezone": "^0.5.45",
     "prettierrc": "^0.0.0-5",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-confirm-alert": "^3.0.6",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
