--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "cookie-universal": "^2.2.2",
     "fa-react-icon": "^1.2.0",
     "flowbite": "^2.3.0",
@@ -24,6 +25,7 @@
     "moment-timezone": "^0.5.45",
     "prettierrc": "^0.0.0-5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-confirm-alert": "^3.0.6",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
